testcases/project_3/13.int_main.c
int main(void) // error
{
  return 0;
}
